reports: fix html being cut off (fixes #545)

--- a/themes/themes-available/Thruk2/stylesheets/Thruk2.css
+++ b/themes/themes-available/Thruk2/stylesheets/Thruk2.css
@@ -49,6 +49,12 @@ body {
   margin-right:5px;
 }
 
+@media print {
+  body {
+    background:#f1f1f1;
+  }
+}
+
 #currentversioninfo {
   font-size:14px;
   padding-top: 10px;
